--- a/DariTn/Views/Shared/_Layout.cshtml
+++ b/DariTn/Views/Shared/_Layout.cshtml
@@ -111,50 +111,43 @@
                 <div class="col-xs-12 col-sm-6 col-md-3">
                     <h5><span>DariTn</span> REAL ESTATE</h5>
                     <ul>
-                        <li><a class="page-scroll" href="#selling">Selling</a></li>
-                        <li><a class="page-scroll" href="#renting">Renting</a></li>
-                        <li><a class="page-scroll" href="#about">Leasehold</a></li>
-                        <li><a class="page-scroll" href="#about">About Us</a></li>
-                        <li><a data-toggle="modal" href="#contact-form">Contact</a></li>
+                        <li><a class="page-scroll" href="#">Buy</a></li>
+                        <li><a class="page-scroll" href="#">Rent</a></li>
+                        <li><a class="page-scroll" href="#">Assets</a></li>
+                        <li><a class="page-scroll" href="#">Fournitures</a></li>
+                        <li><a class="page-scroll" href="#">Credits</a></li>
+                        <li><a class="page-scroll" href="#">Insurance</a></li>
+                        <li><a data-toggle="modal" href="#">Contact</a></li>
+
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-3">
                     <h5>FOLLOW US</h5>
                     <ul>
-                        <li><a href=""><i class="fa fa-facebook"></i> Facebook</a></li>
-                        <li><a href=""><i class="fa fa-twitter"></i> Twitter</a></li>
-                        <li><a href=""><i class="fa fa-google-plus"></i> Google Plus</a></li>
-                        <li><a href=""><i class="fa fa-linkedin"></i> Linkedin</a></li>
-                        <li><a href=""><i class="fa fa-instagram"></i> Instagram</a></li>
+                        <li><a href="#"><i class="fa fa-facebook"></i> Facebook</a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i> Twitter</a></li>
+                        <li><a href="#"><i class="fa fa-google-plus"></i> Google Plus</a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i> Linkedin</a></li>
+                        <li><a href="#"><i class="fa fa-instagram"></i> Instagram</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-3">
-                    <h5>THIS THEMES PAGES</h5>
+                    <h5>Our features</h5>
                     <ul>
-                        <li><a href="index.html">First theme</a></li>
-                        <li><a href="second-theme.html">Second Theme</a></li>
-                        <li><a href="third-theme.html">Third Theme</a></li>
-                        <li><a href="404.html">Error 404</a></li>
+                        <li><a href="#">Fournitures</a></li>
+                        <li><a href="#">Credits</a></li>
+                        <li><a href="#">Insurance</a></li>
+                        <li><a href="#">Others</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-3">
-                    <h5>SUSCRIBE TO OUR NEWSLETTER</h5>
-                    <p>Enter your email adresse to receive our newsletter!</p>
-                    <form class="form-horizontal">
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Enter Your E-mail">
-                                <span class="input-group-btn">
-                                    <button type="submit" class="btn"><i class="fa fa-send-o"></i></button>
-                                </span>
-                            </div>
-                        </div>
-                    </form>
+                    <img src="~/img/fedy-1.png" style="width:100%"/>
+                    <p>With us no more accommodation problems!</p>
                 </div>
             </div>
         </div>
         <div class="footer-ending text-center">
-            <p>&copy; Real Estate Template 2018</p>
+            <p>&copy; developped by 5DEV 2021</p>
         </div>
     </footer>
     <!-- End of Footer Section -->
