--- a/DariTn/Views/AssetAdvs/Index.cshtml
+++ b/DariTn/Views/AssetAdvs/Index.cshtml
@@ -24,7 +24,7 @@
                         <p class="description text-muted">
                             @Html.DisplayFor(modelItem => item.description)
                         </p>
-                        <p class="infos" data-toggle="modal" data-target="#description">News</p>
+                        <p class="infos" data-toggle="modal" data-target="#description">More Information</p>
                         <p class="link text-right" data-toggle="modal" data-target="#pictures">Pictures</p>
                     </div>
                 </div>
