--- a/DariTn/Views/Shared/_Layout.cshtml
+++ b/DariTn/Views/Shared/_Layout.cshtml
@@ -73,8 +73,8 @@
                     <li class="lBorder"><a class="page-scroll" href="#">Credits</a></li>
                     <li class="lBorder"><a class="page-scroll" href="#">Insurance</a></li>
                     <li class="lBorder"><a class="page-scroll" href="#">CONTACT</a></li>
-                    <li class="lBorder"><a class="page-scroll" href="">Sign up</a></li>
-                    <li class="lBorder"><a class="page-scroll" href="#">Login</a></li>
+                    <li class="lBorder">@Html.ActionLink("Register", "Login", "Account")</li>
+                    <li class="lBorder">@Html.ActionLink("Login", "Login", "Account")</li>
 
 
 
