--- a/DariTn/Views/AssetAdvs/Index.cshtml
+++ b/DariTn/Views/AssetAdvs/Index.cshtml
@@ -25,7 +25,7 @@
                             @Html.DisplayFor(modelItem => item.description)
                         </p>
                         <p class="infos" data-toggle="modal" data-target="#description">More Information</p>
-                        <p class="link text-right" data-toggle="modal" data-target="#pictures">Pictures</p>
+                        @Html.ActionLink("Delete", "Delete", new { id = item.id })
                     </div>
                 </div>
             </div>
