trying pull + changes

--- a/DariTn/Views/AssetAdvs/Index.cshtml
+++ b/DariTn/Views/AssetAdvs/Index.cshtml
@@ -26,6 +26,7 @@
                         </p>
                         <p class="infos" data-toggle="modal" data-target="#description">More Information</p>
                         @Html.ActionLink("Delete", "Delete", new { id = item.id })
+                        @Html.ActionLink("Réclamer", "AddComplaint", new { id = 1 })
                     </div>
                 </div>
             </div>
