--- a/DariTn/AdminContent/css/style.css
+++ b/DariTn/AdminContent/css/style.css
@@ -3484,3 +3484,93 @@ ul.chat-available-user li a:hover {
 #copyrights a {
   color: #fff;
 }
+
+
+/*Table*/
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    text-align: left;
+    padding: 5px;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2
+}
+
+th {
+    background-color: #ee3c3c;
+    color: white;
+}
+
+/*Button*/
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 8px 18px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+
+.button1 {
+    background-color: white;
+    color: black;
+    border: 2px solid #4CAF50;
+}
+
+    .button1:hover {
+        background-color: #a1e4af;
+        color: white;
+    }
+
+.button2 {
+    background-color: white;
+    color: dodgerblue;
+    border: 2px solid #e7e7e7;
+}
+
+    .button2:hover {
+        background-color: #9fcfd4;
+        color: white;
+    }
+
+.button3 {
+    background-color: white;
+    color: black;
+    border: 2px solid #f44336;
+}
+
+    .button3:hover {
+        background-color: #f44336;
+        color: white;
+    }
+
+.button4 {
+    background-color: white;
+    color: black;
+    border: 2px solid #e7e7e7;
+}
+
+    .button4:hover {
+        background-color: #e7e7e7;
+    }
+
+.button6 {
+    background-color: white;
+    color: black;
+    border: 2px solid #e7e7e7;
+    padding: 8px 275px;
+}
+
+    .button6:hover {
+        background-color: #bbdfed;
+        color: white;
+    }
