--- a/DariTn/Views/Shared/_Layout.cshtml
+++ b/DariTn/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <link href="~/bootstrap/css/bootstrap-theme.css.map" />
     <link href="~/bootstrap/css/bootstrap-theme.min.css.map" />
     <link href="~/bootstrap/css/bootstrap.css.map" />
+    <link href="~/AdminContent/css/style.css" rel="stylesheet" />
     <link href="~/bootstrap/css/bootstrap.min.css.map" />
     <link href="~/bootstrap/fonts/glyphicons-halflings-regular.woff" />
     <link href="~/bootstrap/fonts/glyphicons-halflings-regular.woff2" />
@@ -69,7 +70,19 @@
                     <li class="lBorder"><a class="page-scroll" href="#">Buy</a></li>
                     <li class="lBorder"><a class="page-scroll" href="#">Rent</a></li>
                     <li class="lBorder"><a class="page-scroll" href="#">Assets</a></li>
-                    <li class="lBorder"><a class="page-scroll" href="#">Fournitures</a></li>
+                    <li class="nav-item dropdown">
+                        <div class="dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Furniture
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+                                <ul> @Html.ActionLink("Buy Furnitures", "Index", "FurnitureAdvs")</ul>
+                                <ul> @Html.ActionLink("Sell ​​Furnitures", "Index2", "FurnitureAdvs")</ul>
+                                <ul> @Html.ActionLink("My Orders", "Index", "Orders")</ul>
+                                <ul> @Html.ActionLink("My ShoppingCart", "Index", "ShoppingCarts")</ul>
+                            </ul>
+                        </div>
+                    </li>
                     <li class="lBorder"><a class="page-scroll" href="#">Credits</a></li>
                     <li class="lBorder"><a class="page-scroll" href="#">Insurance</a></li>
                     <li class="lBorder"><a class="page-scroll" href="#">CONTACT</a></li>
