--- a/DariTn/Views/Home/Index.cshtml
+++ b/DariTn/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="intro-box-second-theme container-fluid">
         <div class="container">
             <h1>FIND YOUR PROPERTY</h1>
-            <p>With us no more accommodation problems</p>
+            <p>You will not have any accommodation problems anymore <br/>once you start using Dari TN</p>
             <div class="intro-btn">
                 <a class="page-scroll btn-custom" href="#about">ABOUT US</a>
             </div>
@@ -21,7 +21,7 @@
     <div class="selling-title container-fluid ">
         <div class=" container second-theme-title">
             <h2>MAKE YOUR CHOICE</h2>
-            <p>liquam porttitor leo non nisl</p>
+            <p>Search for properties with the characteristics of your desire !</p>
         </div>
     </div>
     <ul class="nav nav-tabs">
@@ -37,9 +37,9 @@
                     <div class="sub-box">
                         <img class="img-responsive" src="img/selling-img/sel-img1.jpg">
                         <div class="sub-box-content">
-                            <h5>UT WISI</h5>
+                            <h5>House</h5>
                             <p class="description text-muted">
-                                Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper.
+                                This house is located in Hammamet
                             </p>
                             <p class="infos" data-toggle="modal" data-target="#description">News</p>
                             <p class="link text-right" data-toggle="modal" data-target="#pictures">Pictures</p>
@@ -50,9 +50,9 @@
                     <div class="sub-box">
                         <img class="img-responsive" src="img/selling-img/sel-img2.jpg">
                         <div class="sub-box-content">
-                            <h5>DUIS AUTEM</h5>
+                            <h5>House</h5>
                             <p class="description text-muted">
-                                Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse.
+                                Visits allowed
                             </p>
                             <p class="infos" data-toggle="modal" data-target="#description">News</p>
                             <p class="link text-right" data-toggle="modal" data-target="#pictures">Pictures</p>
@@ -63,9 +63,9 @@
                     <div class="sub-box">
                         <img class="img-responsive" src="img/selling-img/sel-img3.jpg">
                         <div class="sub-box-content">
-                            <h5>VEL ILLUM</h5>
+                            <h5>House</h5>
                             <p class="description text-muted">
-                                vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.
+                                House situated in a very luxury neighborhood
                             </p>
                             <p class="infos" data-toggle="modal" data-target="#description">News</p>
                             <p class="link text-right" data-toggle="modal" data-target="#pictures">Pictures</p>
@@ -76,7 +76,7 @@
                     <div class="sub-box">
                         <img class="img-responsive" src="img/selling-img/sel-img4.jpg">
                         <div class="sub-box-content">
-                            <h5>SED DIAM</h5>
+                            <h5>House</h5>
                             <p class="description text-muted">
                                 sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.
                             </p>
@@ -89,7 +89,7 @@
                     <div class="sub-box">
                         <img class="img-responsive" src="img/selling-img/sel-img5.jpg">
                         <div class="sub-box-content">
-                            <h5>VEL ILLUM</h5>
+                            <h5>House</h5>
                             <p class="description text-muted">
                                 vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.
                             </p>
