--- a/DariTn/Views/AssetAdvs/Details.cshtml
+++ b/DariTn/Views/AssetAdvs/Details.cshtml
@@ -11,11 +11,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ref)
+            @Html.DisplayNameFor(model => model.@ref)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ref)
+            @Html.DisplayFor(model => model.@ref)
         </dd>
 
         <dt>
