--- a/DariTn/Views/AssetAdvs/Index.cshtml
+++ b/DariTn/Views/AssetAdvs/Index.cshtml
@@ -9,116 +9,120 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+<div id="selling" class="second-theme-selling">
+    <div class="tab-content container-fluid">
+        <div id="tab-villa" class="tab-pane active container">
+            <div class="row">
+                @foreach (var item in Model)
+                {
 
+                    <div class="col-xs-12 col-sm-6 col-md-3">
+                        <div class="sub-box">
+                            <img class="img-responsive" src="img/selling-img/sel-img1.jpg">
+                            <div class="sub-box-content">
+                                <h5>@Html.DisplayFor(modelItem => item.category)</h5>
+                                <p class="description text-muted">
 
-<div id="tab-villa" class="tab-pane active container">
-    <div class="row">
-        @foreach (var item in Model)
-        {
+                                    @Html.DisplayFor(modelItem => item.description)
+                                </p>
+                                @Html.ActionLink("More Information", "Details", new { item.id}, new { @class = "infos", data_toggle = "modal", data_target = "#description" })
 
-            <div class="col-xs-12 col-sm-6 col-md-3">
-                <div class="sub-box">
-                    <img class="img-responsive" src="img/selling-img/sel-img1.jpg">
-                    <div class="sub-box-content">
-                        <h5>@Html.DisplayFor(modelItem => item.category)</h5>
-                        <p class="description text-muted">
-                            @Html.DisplayFor(modelItem => item.description)
-                        </p>
-                        <p class="infos" data-toggle="modal" data-target="#description">More Information</p>
-                        @Html.ActionLink("Delete", "Delete", new { id = item.id })
-                        @Html.ActionLink("Réclamer", "AddComplaint", new { id = 1 })
-                        @if (item.localisation == null)
-                        {
-                            @Html.ActionLink(linkText: "Create Localisation", actionName: "Create", controllerName: "Localisations", routeValues: new { id = item.id }, htmlAttributes: null)
-                        }
-                        else
-                        {
-                            @Html.ActionLink(linkText: "Localisation", actionName: "Index", controllerName: "Localisations", routeValues: new { id = item.id }, htmlAttributes: null)
-                        }
-                    </div>
-                </div>
-            </div>
-
-
-            <!-- house description-->
-            <div id="description" class="modal fade main-modal" tabindex="-1" aria-hidden="true">
-                <div class="container-fluid row">
-                    <div class="modal-content col-xs-12 col-sm-6 col-sm-push-3">
-                        <div class="modal-content-header">
-                            <i class="fa fa-times animation" data-dismiss="modal"></i>
-                        </div>
-                        <div class="modal-content-body">
-                            <div class="description">
-                                <h4>Main News</h4>
-                                <div class="box">
-                                    <p>
-                                        Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus musulla duis. Fuscecer feugiat malesuada odio.
-                                    </p>
-                                    <ul>
-                                        <li><i class="fa fa-chevron-right"></i>&nbsp;&nbsp;1 Swimming Pool</li>
-                                        <li><i class="fa fa-chevron-right"></i>&nbsp;&nbsp;1 Private Office</li>
-                                        <li><i class="fa fa-chevron-right"></i>&nbsp;&nbsp;1 Waiting Room</li>
-                                        <li><i class="fa fa-chevron-right"></i>&nbsp;&nbsp;5 Bed Room</li>
-                                        <li><i class="fa fa-chevron-right"></i>&nbsp;&nbsp;1 Garden</li>
-                                    </ul>
-                                    <p class="footer">
-                                        <span class="title">Price</span><span class="label label-danger text-left">$ 15000</span>
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="map">
-                                <h4>House Address</h4>
-                                <p>Segbe, rue akato, Maison Don Peno</p>
-                                <div class="box">
-                                    <div class="google-map"><i class="fa fa-map-marker"></i></div>
-                                </div>
+                                @Html.ActionLink("Delete", "Delete", new { id = item.id }, new { @class = "infos" })
+                                @Html.ActionLink("Réclamer", "AddComplaint", new { id = 1 }, new { @class = "infos" })
+                                @if (item.localisation == null)
+                                {
+                                    @Html.ActionLink(linkText: "Create Localisation", actionName: "Create", controllerName: "Localisations", routeValues: new { id = item.id }, htmlAttributes: null)
+                                }
+                                else
+                                {
+                                    @Html.ActionLink(linkText: "Localisation", actionName: "Index", controllerName: "Localisations", routeValues: new { id = item.id }, htmlAttributes: null)
+                                }
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <!-- End of house description-->
-            <!-- House Pictures-->
-            <div id="pictures" class="modal fade main-modal" tabindex="-1" aria-hidden="true">
-                <div class="container-fluid row">
-                    <div class="modal-content col-xs-12 col-sm-8 col-sm-push-2">
-                        <div class="modal-content-header">
-                            <i class="fa fa-times animation" data-dismiss="modal"></i>
-                        </div>
-                        <div class="modal-content-body">
-                            <div id="houses-pictures" class="carousel slide">
-                                <div class="carousel-inner">
-                                    <div class="item active">
-                                        <img class="img-responsive img-thumbnail" src="~/img/selling-img/sel-img1.jpg">
+
+
+                    <!-- house description-->
+                    <div id="description" class="modal fade main-modal" tabindex="-1" aria-hidden="true">
+                        <div class="container-fluid row">
+                            <div class="modal-content col-xs-12 col-sm-6 col-sm-push-3">
+                                <div class="modal-content-header">
+                                    <i class="fa fa-times animation" data-dismiss="modal"></i>
+                                </div>
+                                <div class="modal-content-body">
+                                    <div class="description">
+                                        <h4>Main News</h4>
+                                        <div class="box">
+                                            <p>
+                                                Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus musulla duis. Fuscecer feugiat malesuada odio.
+                                            </p>
+                                            <ul>
+                                                <li><i class="fa fa-chevron-right"></i>&nbsp;&nbsp;@Html.DisplayFor(modelItem => item.capacity)</li>
+                                                <li><i class="fa fa-chevron-right"></i>&nbsp;&nbsp;@Html.DisplayFor(modelItem => item.capacity)</li>
+                                                <li><i class="fa fa-chevron-right"></i>&nbsp;&nbsp;@Html.DisplayFor(modelItem => item.capacity)</li>
+                                                <li><i class="fa fa-chevron-right"></i>&nbsp;&nbsp;@Html.DisplayFor(modelItem => item.capacity)</li>
+                                                <li><i class="fa fa-chevron-right"></i>&nbsp;&nbsp;@Html.DisplayFor(modelItem => item.capacity)</li>
+                                            </ul>
+                                            <p class="footer">
+                                                <span class="title">Price</span><span class="label label-danger text-left">@Html.DisplayFor(modelItem => item.capacity)</span>
+                                            </p>
+                                        </div>
                                     </div>
-                                    <div class="item">
-                                        <img class="img-responsive img-thumbnail" src="~/img/selling-img/sel-img2.jpg">
-                                    </div>
-                                    <div class="item">
-                                        <img class="img-responsive img-thumbnail" src="~/img/selling-img/sel-img3.jpg">
-                                    </div>
-                                    <div class="item">
-                                        <img class="img-responsive img-thumbnail" src="~/img/selling-img/sel-img4.jpg">
-                                    </div>
-                                    <div class="item">
-                                        <img class="img-responsive img-thumbnail" src="~/img/selling-img/sel-img5.jpg">
-                                    </div>
-                                    <div class="item">
-                                        <img class="img-responsive img-thumbnail" src="~/img/selling-img/sel-img6.jpg">
+                                    <div class="map">
+                                        <h4>House Address</h4>
+                                        <p>Segbe, rue akato, Maison Don Peno</p>
+                                        <div class="box">
+                                            <div class="google-map"><i class="fa fa-map-marker"></i></div>
+                                        </div>
                                     </div>
                                 </div>
-                                <a class="direction direction-left animation" href="#houses-pictures" data-slide="prev">
-                                    <i class="fa fa-chevron-left"></i>
-                                </a>
-                                <a class="direction direction-right animation" href="#houses-pictures" data-slide="next">
-                                    <i class="fa fa-chevron-right"></i>
-                                </a>
                             </div>
                         </div>
                     </div>
-                </div>
+                    <!-- End of house description-->
+                    <!-- House Pictures-->
+                    <div id="pictures" class="modal fade main-modal" tabindex="-1" aria-hidden="true">
+                        <div class="container-fluid row">
+                            <div class="modal-content col-xs-12 col-sm-8 col-sm-push-2">
+                                <div class="modal-content-header">
+                                    <i class="fa fa-times animation" data-dismiss="modal"></i>
+                                </div>
+                                <div class="modal-content-body">
+                                    <div id="houses-pictures" class="carousel slide">
+                                        <div class="carousel-inner">
+                                            <div class="item active">
+                                                <img class="img-responsive img-thumbnail" src="~/img/selling-img/sel-img1.jpg">
+                                            </div>
+                                            <div class="item">
+                                                <img class="img-responsive img-thumbnail" src="~/img/selling-img/sel-img2.jpg">
+                                            </div>
+                                            <div class="item">
+                                                <img class="img-responsive img-thumbnail" src="~/img/selling-img/sel-img3.jpg">
+                                            </div>
+                                            <div class="item">
+                                                <img class="img-responsive img-thumbnail" src="~/img/selling-img/sel-img4.jpg">
+                                            </div>
+                                            <div class="item">
+                                                <img class="img-responsive img-thumbnail" src="~/img/selling-img/sel-img5.jpg">
+                                            </div>
+                                            <div class="item">
+                                                <img class="img-responsive img-thumbnail" src="~/img/selling-img/sel-img6.jpg">
+                                            </div>
+                                        </div>
+                                        <a class="direction direction-left animation" href="#houses-pictures" data-slide="prev">
+                                            <i class="fa fa-chevron-left"></i>
+                                        </a>
+                                        <a class="direction direction-right animation" href="#houses-pictures" data-slide="next">
+                                            <i class="fa fa-chevron-right"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End of House Pictures-->
+                }
             </div>
-            <!-- End of House Pictures-->
-        }
+        </div>
     </div>
 </div>
