--- a/DariTn/Views/AssetAdvs/Index.cshtml
+++ b/DariTn/Views/AssetAdvs/Index.cshtml
@@ -12,7 +12,7 @@
 @{ int idlogged = 1;}
 
 <div id="tab-villa" class="tab-pane active container">
-    <select name="pets" id="pet-select">
+    <select name="sort" id="sort-select">
         <option value="">-- Sort by --</option>
         <option value="PriceAsc">Lowest Price</option>
         <option value="PriceDesc">Highest Price</option>
