--- a/DariTn/Views/Orders/Create.cshtml
+++ b/DariTn/Views/Orders/Create.cshtml
@@ -16,10 +16,10 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.reff, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.@ref, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.reff, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.reff, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.@ref, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.@ref, "", new { @class = "text-danger" })
             </div>
         </div>
 
