--- a/DariTn/Views/AssetAdvs/Index.cshtml
+++ b/DariTn/Views/AssetAdvs/Index.cshtml
@@ -25,21 +25,27 @@
                                 <p class="description text-muted">
 
                                     @Html.DisplayFor(modelItem => item.description)
+                                    @Html.DisplayFor(Model => item.userid)
+                                    @Html.DisplayFor(modelItem => item.category)
+                                    @Html.DisplayFor(modelItem => item.User.id)
+                                    @Html.DisplayFor(modelItem => item.User.firstName)
+                                    @Html.DisplayFor(modelItem => item.category)
                                 </p>
                                 @Html.ActionLink("More Information", "Details", null, new { @class = "infos", data_toggle = "modal", data_target = "#description" })
+                                
 
-                                @Html.ActionLink("Delete", "Delete", new { id = item.id }, new { @class = "infos" })
-                                @Html.ActionLink("Complain", "AddComplaint")
+
+                                <!-- @Html.ActionLink("Complain", "AddComplaint")-->
                                 @{
                                     //Html.ActionLink(linkText: "Complainn", actionName: "AddComplaint", controllerName: "Complaints", routeValues: new { id = idlogged }, htmlAttributes: null)
                                 }
                                 @if (item.localisation == null)
                                 {
-                                    @Html.ActionLink(linkText: "Create Localisation", actionName: "Create", controllerName: "Localisations", routeValues: new { id = item.id }, htmlAttributes: null)
+                                    @Html.ActionLink(linkText: "Set Address", actionName: "Create", controllerName: "Localisations", routeValues: new { id = item.id }, htmlAttributes: null)
                                 }
                                 else
                                 {
-                                    @Html.ActionLink(linkText: "Localisation", actionName: "Index", controllerName: "Localisations", routeValues: new { id = item.id }, htmlAttributes: null)
+                                    @Html.ActionLink(linkText: "Location", actionName: "Index", controllerName: "Localisations", routeValues: new { id = item.id }, htmlAttributes: null)
                                 }
                             </div>
                         </div>
