--- a/DariTn/Views/Shared/_Layout.cshtml
+++ b/DariTn/Views/Shared/_Layout.cshtml
@@ -67,9 +67,19 @@
             <div class="collapse navbar-collapse" id="toggle">
                 <ul class="nav navbar-nav">
                     <li class="lBorder">@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li class="lBorder"><a class="page-scroll" href="#">Buy</a></li>
-                    <li class="lBorder"><a class="page-scroll" href="#">Rent</a></li>
-                    <li class="lBorder"><a class="page-scroll" href="#">Assets</a></li>
+                    <li class="nav-item dropdown">
+                        <div class="dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Properties
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+                                <ul> @Html.ActionLink("All Advertisements", "Index", "AssetAdvs")</ul>
+                                <ul> @Html.ActionLink("Rent Advertisements", "Rent", "AssetAdvs")</ul>
+                                <ul> @Html.ActionLink("Sale Advertisements", "Sale", "AssetAdvs")</ul>
+                                <ul> @Html.ActionLink("My Advertisements", "MyAdvs", "AssetAdvs")</ul>
+                            </ul>
+                        </div>
+                    </li>
                     <li class="nav-item dropdown">
                         <div class="dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
