--- a/DariTn/Views/FurnitureAdvs/IndexAdmin2.cshtml
+++ b/DariTn/Views/FurnitureAdvs/IndexAdmin2.cshtml
@@ -33,7 +33,7 @@
 
                     <button class="button button2"> @Html.ActionLink("Details", "DetailsAdmin", new { id = item.id })</button>
                     <button class="button button1"> @Html.ActionLink("Accept", "Accept", new { id = item.id })</button>
-                    <button class="button button3"> @Html.ActionLink("Delete", "DeleteAdmin2", new { id = item.id })</button>
+                    <button class="button button3"> @Html.ActionLink("Delete", "DeleteAdmin", new { id = item.id })</button>
 
                     <br><br><br>
                 </div>
