--- a/DariTn/Views/Shared/_Layout.cshtml
+++ b/DariTn/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello</title>
+    <title>DariTn</title>
     <link href="~/bootstrap/css/bootstrap-theme.css" rel="stylesheet" />
     <link href="~/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="~/bootstrap/css/bootstrap.css" rel="stylesheet" />
