--- a/DariTn/Views/FurnitureAdvs/CreateAdmin.cshtml
+++ b/DariTn/Views/FurnitureAdvs/CreateAdmin.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "~/Views/Admin/_LayoutAdmin.cshtml";
-    ViewBag.Title = "Create";
+    ViewBag.Title = "CreateAdmin";
 }
 
 
@@ -63,8 +63,8 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <br>
-                <button class="button button2 " value="Create"> Add </button>
-                <button class="button button4"> @Html.ActionLink("  Back  ", "Index2")</button>
+                <button class="button button2 " value="CreateAdmin"> Add </button>
+                <button class="button button4"> @Html.ActionLink("  Back  ", "IndexAdmin2")</button>
             </div>
         </div>
         <br><br>
