--- a/DariTn/Views/FurnitureAdvs/DetailsAdmin.cshtml
+++ b/DariTn/Views/FurnitureAdvs/DetailsAdmin.cshtml
@@ -27,7 +27,7 @@
                     <h4 style="color:cornflowerblue"> <a style="color:#000000; font-size:22px">  Available: </a>  @Html.DisplayFor(model => model.availability)</h4>
 
                     <button class="button button4"> @Html.ActionLink("  Back  ", "IndexAdmin")</button>
-                    <button class="button button3"> @Html.ActionLink("Delete", "DeleteAdmin", new { id = Model.id })</button>
+                    <button class="button button3"> @Html.ActionLink("Delete", "DeleteAdmin2", new { id = Model.id })</button>
 
 
                 </div>
