--- a/DariTn/Views/Shared/_Layout.cshtml
+++ b/DariTn/Views/Shared/_Layout.cshtml
@@ -87,7 +87,8 @@
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
                                 <ul> @Html.ActionLink("Buy Furnitures", "Index", "FurnitureAdvs")</ul>
-                                <ul> @Html.ActionLink("Sell ​​Furnitures", "Index2", "FurnitureAdvs")</ul>
+                                <ul> @Html.ActionLink("My ​​Furnitures", "Index2", "FurnitureAdvs")</ul>
+                                <ul> @Html.ActionLink("Add Furnitures", "Create", "FurnitureAdvs")</ul>
                                 <ul> @Html.ActionLink("My Orders", "Index", "Orders")</ul>
                                 <ul> @Html.ActionLink("My ShoppingCart", "Index", "ShoppingCarts")</ul>
                             </ul>
