--- a/DariTn/Views/FurnitureAdvs/Details.cshtml
+++ b/DariTn/Views/FurnitureAdvs/Details.cshtml
@@ -11,26 +11,31 @@
     <h3 class="color0" , style="color:crimson">Furniture Details: </h3>
     <hr />
     <dl class="dl-horizontal">
+        <div id="selling" class="second-theme-selling" >
+            <div class="tab-content container-fluid" style="width:700px;height:500px">
+                <div id="tab-villa" class="tab-pane active container"  >
+                    <div class="row">
 
-        <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="sub-box">
-                <img class="img-responsive" src="img/selling-img/sel-img1.jpg" />
-                <div class="sub-box-content">
-                    <h4 style="color:cornflowerblue"> <a style="color:#000000; font-size:22px"> Ref: </a>@Html.DisplayFor(model => model.@ref)</h4>
-                    <h4 style="color:cornflowerblue"> <a style="color:#000000; font-size:22px"> Name: </a> @Html.DisplayFor(model => model.name)</h4>
-                    <h4 style="color:cornflowerblue"> <a style="color:#000000; font-size:22px"> Type: </a> @Html.DisplayFor(model => model.type)</h4>
-                    <h4 style="color:cornflowerblue"> <a style="color:#000000; font-size:22px"> Price: </a>  @Html.DisplayFor(model => model.price) DT</h4>
-                    <h4 style="color:cornflowerblue"> <a style="color:#000000; font-size:22px">  Description: </a> @Html.DisplayFor(model => model.description)</h4>
-                    <h4 style="color:cornflowerblue"> <a style="color:#000000; font-size:22px">  Added Date: </a>  @Html.DisplayFor(model => model.addedDate)</h4>
+                        <div class="col-xs-12 col-sm-6 col-md-3" style="margin-left:200px">
+                            <div class="sub-box">
+                                <img class="img-responsive" src="img/selling-img/sel-img1.jpg" />
+                                <div class="sub-box-content">
+                                    <h4 style="color:cornflowerblue"> <a style="color:#000000; font-size:22px"> Ref: </a>@Html.DisplayFor(model => model.@ref)</h4>
+                                    <h4 style="color:cornflowerblue"> <a style="color:#000000; font-size:22px"> Name: </a> @Html.DisplayFor(model => model.name)</h4>
+                                    <h4 style="color:cornflowerblue"> <a style="color:#000000; font-size:22px"> Type: </a> @Html.DisplayFor(model => model.type)</h4>
+                                    <h4 style="color:cornflowerblue"> <a style="color:#000000; font-size:22px"> Price: </a>  @Html.DisplayFor(model => model.price) DT</h4>
+                                    <h4 style="color:cornflowerblue"> <a style="color:#000000; font-size:22px">  Description: </a> @Html.DisplayFor(model => model.description)</h4>
+                                    <h4 style="color:cornflowerblue"> <a style="color:#000000; font-size:22px">  Added Date: </a>  @Html.DisplayFor(model => model.addedDate)</h4>
 
-                    <button class="button button4"> @Html.ActionLink("  Back  ", "Index")</button>
+                                    <button class="button button4"> @Html.ActionLink("  Back  ", "Index")</button>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
             </div>
-
         </div>
-        <br>
-        <br>
-        <br>
 
     </dl>
 </div>
