--- a/DariTn/Views/FurnitureAdvs/Edit.cshtml
+++ b/DariTn/Views/FurnitureAdvs/Edit.cshtml
@@ -10,69 +10,59 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
-    <div class="form-horizontal" style="border-radius: 5px; background-color: #f2f2f2; padding: 5px;">
-        <br><br><br>
-        <h3 class="color0" , style="color:crimson"> Edit Furniture  </h3>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.id)
-
-
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.type, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.type, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.type, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.price, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.price, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger" })
-            </div>
-        </div>
+     
+    <br><br><br>
+    <h3 class="color0" , style="color:crimson"> Edit Furniture: </h3><hr />
+<div class="form-horizontal" style="border-radius: 5px; background-color: #f2f2f2; padding: 5px;">
+   
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.id)
 
 
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.image, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.image, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.image, "", new { @class = "text-danger" })
-            </div>
-        </div>
+
+    <div class="col-md-10">
+        Furniture Name:
+        @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
+    </div>
+
+    <div class="col-md-10">
+        Furniture Type:
+        @Html.EditorFor(model => model.type, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.type, "", new { @class = "text-danger" })
+    </div>
+
+    <div class="col-md-10">
+        Description:
+        @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
+    </div>
+
+    <div class="col-md-10">
+         Price: 
+        @Html.EditorFor(model => model.price, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger" })
+     </div>
+
+    <div class="col-md-10">
+        Image;
+        @Html.EditorFor(model => model.image, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.image, "", new { @class = "text-danger" })
+        <br>
+    </div>
+    
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <button class="button button2" value="Save"> Save </button>
                 <button class="button button4"> @Html.ActionLink("  Back  ", "Index2")</button>
             </div>
-
+            <br><br>
         </div>
-    </div>
+</div>
 
-  
+  <br><br><br>
 }
 
 
