--- a/DariTn/Views/FurnitureAdvs/Index.cshtml
+++ b/DariTn/Views/FurnitureAdvs/Index.cshtml
@@ -4,73 +4,79 @@
     ViewBag.Title = "Index";
 }
 
- 
+
+@{ int idlogged = 3;}
+
 <table class="table">
     <br>
     <br>
     <br>
 
-    
-        <!-- Search by Name- start -->
-        <div class="search-field">
-            <br><br><br><br>
-            <button class="button button2"> @Html.ActionLink("Sort By Price ASC", "Index3")</button><br><br>
-            <button class="button button2"> @Html.ActionLink("Sort By Price DESC", "Index4")</button><br><br>
-            <form class="search-field-form">
-                <input type="text" placeholder="Search By Name">
-                <button type="submit"><i class="fa fa-search"></i> </button>
-            </form><br><br>
-            <form class="search-field-form">
-                <input type="text" placeholder="Search By Type">
-                <button type="submit"><i class="fa fa-search"></i></button>
-            </form><br><br>
-            <form class="search-field-form">
-                <input type="text" placeholder="Search By Price">
-                <button type="submit"><i class="fa fa-search"></i></button>
-            </form>
 
-        </div>
-    
+    <!-- Search by Name- start -->
+    <div class="search-field">
+        <br><br><br><br>
+        <button class="button button2"> @Html.ActionLink("Sort By Price ASC", "Index3")</button><br><br>
+        <button class="button button2"> @Html.ActionLink("Sort By Price DESC", "Index4")</button><br><br>
+        <form class="search-field-form">
+            <input type="text" placeholder="Search By Name">
+            <button type="submit"><i class="fa fa-search"></i> </button>
+        </form><br><br>
+        <form class="search-field-form">
+            <input type="text" placeholder="Search By Type">
+            <button type="submit"><i class="fa fa-search"></i></button>
+        </form><br><br>
+        <form class="search-field-form">
+            <input type="text" placeholder="Search By Price">
+            <button type="submit"><i class="fa fa-search"></i></button>
+        </form>
+
+    </div>
+
     <h3 class="color0" , style="color:crimson">Furniture for sale: </h3>
     <br>
 
 
+    <div id="selling" class="second-theme-selling">
+        <div class="tab-content container-fluid">
+            <div id="tab-villa" class="tab-pane active container">
+                <div class="row">
+
+                    @foreach (var item in Model)
+                    {
 
 
-    @foreach (var item in Model)
-    {
+                        <div class="col-xs-12 col-sm-6 col-md-3">
+                            <div class="sub-box">
+                                <img class="img-responsive" src="img/selling-img/sel-img1.jpg" />
+                                <div class="sub-box-content">
+                                    <h5 style="color:#313030"> <a style="color:#000000; font-size:20px">Ref: </a> @Html.DisplayFor(modelItem => item.@ref)</h5>
+                                    <h5 style="color:#313030"><a style="color:#000000; font-size:20px"> @Html.DisplayFor(modelItem => item.name): </a> @Html.DisplayFor(modelItem => item.description) </h5>
+                                    <h5 style="color:crimson"><a style="color:#000000; font-size:20px"> Price: </a>  @Html.DisplayFor(modelItem => item.price) DT</h5>
 
 
-        <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="sub-box">
-                <img class="img-responsive" src="img/selling-img/sel-img1.jpg" />
-                <div class="sub-box-content">
-                    <h4 style="color:cornflowerblue"> <a style="color:#000000; font-size:22px">Ref: </a> @Html.DisplayFor(modelItem => item.@ref)</h4>
-                    <h4 style="color:cornflowerblue"><a style="color:#000000; font-size:22px"> Name: </a> @Html.DisplayFor(modelItem => item.name)</h4>
-                    <h4 style="color:cornflowerblue"><a style="color:#000000; font-size:22px"> Price: </a>  @Html.DisplayFor(modelItem => item.price) DT</h4>
-                    <h4 style="color:cornflowerblue"> <a style="color:#000000; font-size:22px">Description: </a> @Html.DisplayFor(modelItem => item.description)</h4>
+                                    <button class="button button2"> @Html.ActionLink("Details", "Details", new { id = item.id })</button>
+
+                                    @if (item.User.id.Equals(idlogged))
+                                    {
+                                        <button class="button button1"> @Html.ActionLink("Edit", "Edit", new { id = item.id })</button>
+                                        <button class="button button3"> @Html.ActionLink("Delete", "Delete", new { id = item.id })</button>
+                                    }
+                                    else
+                                    {
+                                        <button class="button button1">@Html.ActionLink("Add to Basket.", "AddFurnitureToShoppingCart", new { id = item.id })</button>
+                                    }
+
+                                </div>
+                            </div>
+                        </div>
 
 
 
-                    <button class="button button2"> @Html.ActionLink("Details", "Details", new { id = item.id })</button>
-                    <br><br>
-                    <button class="button button1">@Html.ActionLink("Add To My ShoppingCart", "AddFurnitureToShoppingCart", new { id = item.id })</button>
-
-                    <br><br><br>
-                </div>
-            </div>
+                    }
+      </div>
         </div>
-
-
-
-    }
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    </div>
+</div>
+                 
 </table>
